feat: stabilize jcr with JDK 17 - EXO-58815